# grid nerds: format css according htmlacademy guide; add reset for tags; add basic rule for btn class; fix header layout; extract slider from header create slider; shift pages in catalog content; change div.footer -> footer; change div.main -> main

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,36 @@
+html,
+body,
+div,
+span,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+a,
+img,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+article,
+figure,
+figcaption,
+footer,
+header,
+menu,
+nav,
+section
+{
+    margin: 0;
+    padding: 0;
+}
+
 body
 {
     font-family: Roboto, Arial, sans-serif;
@@ -40,15 +73,33 @@ h4
     font-weight: 400;
     line-height: 30px;
 
-    color: black;
+    color: #000;
 }
 
+.btn
+{
+    display: inline-block;
+
+    padding: 10px 35px;
+
+    vertical-align: top;
+    text-decoration: none;
+
+    color: white;
+    border-radius: 5px;
+    background-color: #fb565a;
+}
+
+.clearfix:before,
 .clearfix:after
 {
     display: table;
-    clear: both;
 
     content: '';
+}
+.clearfix:after
+{
+    clear: both;
 }
 
 .to-left
@@ -61,35 +112,51 @@ h4
     float: right;
 }
 
+.hidden
+{
+    display: none;
+}
+
 /* START index page*/
 
+.main-header
+{
+    position: relative;
+
+    height: 110px;
+    padding-bottom: 10px;
+
+    background-color: #eee;
+}
 
 .container
 {
     width: 880px;
     margin: 0 auto;
-    margin-bottom: 20px; /*[DL] 10/25 margin-bottom лучше задавай блоку, которому необходим этот отступ.
-  Т.е я бы в твоём случае нижний отступ ставил для header, main и других.
-  Контейнер предназчен только для горизонтального центрировния элементом.*/
     padding-right: 10px;
     padding-left: 10px;
 }
 
+
 .header-logo
 {
-    width: 150px;
-    margin-right: 20px;
+    width: 140px;
+    padding-top: 17px;
+    padding-right: 10px;
 }
 
 .main-navigation
 {
-    width: 710px;
+    position: absolute;
+    top: 50px;
+
+    width: 560px;
+    margin-left: 320px;
 }
 
 .main-navigation ul
 {
     margin: 0;
-    margin-left: 150px;
     padding: 0;
 
     list-style: none;
@@ -98,8 +165,6 @@ h4
 .main-navigation li
 {
     display: inline-block;
-
-    margin-right: 5px;
 }
 
 .main-navigation a
@@ -108,7 +173,7 @@ h4
     font-weight: 400;
     line-height: 30px;
 
-    padding: 25px 15px;
+    padding: 0 10px;
 
     text-decoration: none;
     text-transform: uppercase;
@@ -116,33 +181,137 @@ h4
     color: #000;
 }
 
-.main-navigation a:last-child
+.slider-container
 {
-    padding-left: 15px;
+    height: 320px;
+
+    background-color: #eee;
 }
 
 
-
-.slide
+/* START slider */
+.slider
 {
-    min-height: 400px;
-    margin-bottom: 10px;
+    position: relative;
 }
 
-.header-slider-content
+.slider input[type=radio]
+{
+    display: none;
+}
+
+.slider-inner
+{
+    overflow: hidden;
+}
+
+.slider-slides
+{
+    width: 300%;
+
+    transition: transform .8s ease;
+}
+
+.slider-slides .slide
+{
+    float: left;
+
+    width: 880px;
+    height: 275px;
+}
+
+.slider-content
 {
     width: 380px;
-    margin-right: 10px;
+    padding-right: 10px;
 }
 
-.header-slider-picture
+.slider-title
 {
-    width: 380px;
+    font-size: 36px;
+    font-weight: 400;
+    line-height: 36px;
+
+    padding-bottom: 20px;
+
+    color: black;
+}
+
+.slider-content p
+{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 22px;
+
+    padding-bottom: 35px;
+
+    color: #283136;
+}
+
+.slider-content a
+{
+    padding: 10px 65px;
+
+    background-color: #fb565a;
+}
+
+.slider-picture
+{
+    width: 340px;
     margin: 0;
     padding: 0;
 }
 
+.slider-controls
+{
+    position: absolute;
+    z-index: 100;
+    bottom: 75px;
+    left: 0;
 
+    width: 100%;
+
+    text-align: center;
+}
+
+.slider-controls label
+{
+    display: inline-block;
+
+    width: 10px;
+    height: 10px;
+    margin: 0 3px;
+
+    cursor: pointer;
+    transition: background-color .2s;
+
+    border: 4px solid white;
+    border-radius: 50%;
+    background: #ccc;
+    box-shadow: 0 0 2px rgba(0,0,0,.8);
+}
+
+#btn-1:checked ~ .slider-controls label[for='btn-1'],
+#btn-2:checked ~ .slider-controls label[for='btn-2'],
+#btn-3:checked ~ .slider-controls label[for='btn-3']
+{
+    background-color: #666;
+}
+
+#btn-1:checked ~ .slider-inner .slider-slides
+{
+    transform: translate(0);
+}
+
+#btn-2:checked ~ .slider-inner .slider-slides
+{
+    transform: translate(-880px);
+}
+#btn-3:checked ~ .slider-inner .slider-slides
+{
+    transform: translate(-1760px);
+}
+/* END slider */
 
 .services
 {
@@ -184,8 +353,6 @@ h4
     min-height: 450px;
 }
 
-
-
 .client
 {
     float: left;
@@ -210,11 +377,6 @@ h4
     width: 880px;
 }
 
-.hidden
-{
-    display: none;
-}
-
 /* END index page*/
 
 /* START catalog page*/
@@ -223,8 +385,6 @@ h4
 {
     min-height: 200px;
 }
-
-
 
 .catalog-filters
 {
@@ -280,12 +440,13 @@ h4
     color: #000;
 }
 
-
-
+.catalog-gallery
+{
+    font-size: 0;
+}
 .catalog-gallery-item
 {
-    float: left;
-    /*[DL] 10/25  Рекомендую использовать инлайн-блоки*/
+    display: inline-block;
 
     width: 240px;
     min-height: 270px;
@@ -306,8 +467,6 @@ h4
 
     background-color: #fff;
 }
-
-
 
 .item-price-title
 {
@@ -333,10 +492,7 @@ h4
 
     color: #283136;
 }
-
 /* END item-price*/
-
-
 
 .pages
 {
@@ -365,5 +521,4 @@ h4
     color: #000;
     background-color: #f1f1f1;
 }
-
 /* END catalog page*/
